@@ -94,51 +94,6 @@ if ($uid = get_input_value('_uid', RCUBE_INPUT_GET)) {
     }
   }
 
-  // get previous, first, next and last message UID
-  if ($RCMAIL->action != 'preview' && $RCMAIL->action != 'print')
-    {
-    $next = $prev = $first = $last = -1;
-
-    if ($_SESSION['sort_col'] == 'date' && $_SESSION['sort_order'] != 'DESC'
-        && empty($_REQUEST['_search']) && !$CONFIG['skip_deleted'] && !$IMAP->threading)
-      {
-      // this assumes that we are sorted by date_DESC
-      $cnt = $IMAP->messagecount();
-      $seq = $IMAP->get_id($MESSAGE->uid);
-      $MESSAGE->index = $cnt - $seq;
-
-      $prev = $IMAP->get_uid($seq + 1);
-      $first = $IMAP->get_uid($cnt);
-      $next = $IMAP->get_uid($seq - 1);
-      $last = $IMAP->get_uid(1);
-      }
-    else 
-      {
-      // Only if we use custom sorting
-      $a_msg_index = $IMAP->message_index(NULL, $_SESSION['sort_col'], $_SESSION['sort_order']);
-
-      $MESSAGE->index = array_search($IMAP->get_id($MESSAGE->uid), $a_msg_index);
-
-      $count = count($a_msg_index);
-      $prev = isset($a_msg_index[$MESSAGE->index-1]) ? $IMAP->get_uid($a_msg_index[$MESSAGE->index-1]) : -1;
-      $first = $count > 1 ? $IMAP->get_uid($a_msg_index[0]) : -1;
-      $next = isset($a_msg_index[$MESSAGE->index+1]) ? $IMAP->get_uid($a_msg_index[$MESSAGE->index+1]) : -1;
-      $last = $count > 1 ? $IMAP->get_uid($a_msg_index[$count-1]) : -1;
-      }
-
-    if ($prev > 0)
-      $OUTPUT->set_env('prev_uid', $prev);
-    if ($first > 0)
-      $OUTPUT->set_env('first_uid', $first);
-    if ($next > 0)
-      $OUTPUT->set_env('next_uid', $next);
-    if ($last > 0)
-      $OUTPUT->set_env('last_uid', $last);
-
-    // Don't need a real messages count value
-    $OUTPUT->set_env('messagecount', 1);
-    }
-
   if (!$MESSAGE->headers->seen && ($RCMAIL->action == 'show' || ($RCMAIL->action == 'preview' && intval($CONFIG['preview_pane_mark_read']) == 0)))
     $RCMAIL->plugins->exec_hook('message_read', array('uid' => $MESSAGE->uid,
       'mailbox' => $mbox_name, 'message' => $MESSAGE));
